# wx-templ

./: CMakeLists.txt
src/: main.cpp  mainframe.cpp  mainframe.h  resicon.h  resicon.rc
src/res/: logo.xpm  resource.h
